# models/auth.go
@@ -3,6 +3,7 @@ package models
 import (
 	"backend-cinemax/config"
 	c "backend-cinemax/config"
+	"backend-cinemax/dto"
 	"context"
 	"fmt"
 
@@ -10,39 +11,8 @@ import (
 	"github.com/jackc/pgx/v5"
 )
 
-type RegisterRequest struct {
-	Email 			string `json:"email" form:"email"`
-	Password 		string `json:"password" form:"password"`
-	ConfirmPassword string `json:"confirm_password" form:"confirm_password"`
-}
-
-type LoginRequest struct {
-	ID 		  	uuid.UUID `json:"id" form:"id"`
-	Email 	  string `json:"email" form:"email"`
-	Password  string `json:"password" form:"password"`
-}
-
-type ForgotPasswordRequest struct {
-	Email string `form:"email" json:"email"`
-}
-
-type ChangePasswordRequest struct {
-	Email 				string `json:"email" form:"email"`
-	NewPassword 		string `json:"new_password" form:"new_password"`
-	ConfirmNewPassword 	string `json:"confirm_new_password" form:"confirm_new_password"`
-}
-
 type IsEmailExistType struct {
 	Email string `json:"email"`
-}
-
-type OTPRequest struct {
-	Email string `json:"email" form:"email"`
-	OTP string `json:"otp" form:"otp"`
-}
-
-type VerifyOTP struct {
-	OTP string `json:"otp" form:"otp"`
 }
 
 func IsEmailExist(email string) bool {
@@ -122,7 +92,7 @@ func MatchUserInDatabase(email string, password string) bool {
 	}
 
 	// collect row and map to struxt
-	users, err := pgx.CollectRows[LoginRequest](rows, pgx.RowToStructByName)
+	users, err := pgx.CollectRows[dto.LoginRequest](rows, pgx.RowToStructByName)
 	if err != nil {
 		fmt.Println("MatchUserInDatabase error collect row:", err)
 		return false
